--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -4,7 +4,7 @@
     <p><em>Loading...</em></p>
 }
 
-@if (books) {
+@if (books && authService.isAuthenticated()) {
     <button mat-flat-button color="primary"
         class="btn-add" [routerLink]="['/book']">
         Add a new Book
