--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -40,7 +40,9 @@
     <!-- Total Books Column -->
     <ng-container matColumnDef="totalBooks">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Number of Books</th>
-        <td mat-cell *matCellDef="let category">{{category.totalBooks}}</td>
+        <td mat-cell *matCellDef="let category">
+            <a [routerLink] = "['/booksOfCategory', category.id]">{{category.totalBooks}}</a>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
